tests/algorithms/x/Pascal/dynamic_programming/k_means_clustering_tensorflow.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/dynamic_programming/k_means_clustering_tensorflow.pas
k_means_clustering_tensorflow.pas(199,49) Error: Incompatible type for arg no. 1: Got "KMeansResult.{Dynamic} Array Of RealArray", expected "{Open} Array Of LongInt"
k_means_clustering_tensorflow.pas(215) Fatal: There were 1 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
